# surrealdb-rpc.py

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  workflow.yml
surrealdb_rpc/: data_model.py  protocol.py
surrealdb_rpc/client/: __init__.py  interface.py  websocket.py
surrealdb_rpc/client/websocket/: __init__.py  base.py  surrealdb.py
surrealdb_rpc/data_model/: __init__.py  record_id.py  string.py  surql.py  table.py  thing.py
surrealdb_rpc/serialization/: __init__.py  json.py  msgpack.py
surrealdb_rpc/tests/: test_data_model.py  test_docker.py  utils.py
surrealdb_rpc/tests/integration/: queries.py  test_integration.py  test_websocket.py
surrealdb_rpc/tests/unit/: test_data_model.py
