[project]
name = "surrealdb-rpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.1.0",
    "notebook>=7.3.1",
    "ulid>=1.1",
    "uuid7>=0.1.0",
    "websockets>=14.1",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.12.0",
]
